<resources>
    <string name="app_name">Intercom Demo App</string>
    <string name="intercom_gcm_sender_id">YOUR_SENDER_ID</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_userid">User ID(optional)</string>
    <string name="action_sign_in">Sign in \n .registerIdentifiedUser()</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_save">Save</string>
    <string name="action_sign_in_unidentified">Register Unidentified\n .registerUnidentifiedUser()</string>
    <string name="action_update_attribute">Update Attribute \n userAttributes = new UserAttributes.Builder().______.build(); \n .updateUser(userAttributes)</string>
    <string name="action_submit_event">Submit Event \n .logEvent(name, eventMetaData);</string>
    <string name="action_logout">Logout \n .logout()</string>


    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="title_activity_push_settings">Push Settings</string>
    <string name="title_activity_event">Event</string>
    <string name="title_activity_attribute">Attributes</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="confirm_push_notification">This will minimise the app to allow push notification to be received. Continue?</string>
    <string name="sender_id">Sender ID</string>
    <string name="gcm_api_key">GCM API Key</string>
    <string name="token_to_use">Token to use</string>
    <string name="test_push_notification">Test Push Notification</string>
    <string name="test_push_message">Test Push Message</string>
    <string name="email">Email</string>
    <string name="user_id">User ID</string>
    <string name="use_my_token">Use My Token</string>
    <string name="show_composer">New Message \n .displayMessageComposer()</string>
    <string name="show_conversations">Display Messenger \n .displayMessenger()</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="bottom_right">Bottom Right</string>
    <string name="login">Login</string>
    <string name="secure_mode">Secure Mode</string>
    <string name="push">Push</string>
    <string name="nav_custom_attributes">Custom Attributes</string>
    <string name="nav_submit_event">Submit Event</string>
    <string name="nav_settings">SDK Settings</string>
    <string name="nav_secure_mode">Configure Secure Mode</string>
    <string name="nav_push">Push Settings</string>
    <string name="nav_login">Login</string>
    <string name="header_sdk_settings">SDK Settings</string>
    <string name="header_secure_mode_settings">Secure Mode</string>
    <string name="header_push_settings">Push Settings</string>
    <string name="header_login">User Login</string>
    <string name="header_attribute">Attributes</string>
    <string name="header_events">Events</string>
    <string name="header_misc_settings">Other Settings</string>
    <string name="header_new_message_prefill">Prefill text</string>
    <string name="header_launcher_padding">Launcher Padding</string>
    <string name="action_launcher_padding">Set Padding \n .setBottomPadding()</string>
    <string name="header_launcher_settings">Launcher Settings</string>
    <string name="header_interface_settings">Interface Settings</string>
    <string name="header_visibility_settings">Visibility Settings</string>
    <string name="header_unread_settings">Unread Count Settings</string>
    <string name="header_test_push">Test Push</string>
    <string name="confirm_close">You will need to completely close the app to initialise it with these new settings (go to multi tasking mode and swipe app away). </string>
    <string name="confirm_redirect_to_settings">Invalid settings. Specify App ID and SDK API Key to continue</string>
    <string name="gcm_api_key_warning">The FCM API Key is used to send test push notifications to this device. It is not needed for regular integrations and also should be considered a secret and not shared.</string>
    <string name="secret_key_settings_warning">The secret key should NEVER be embedded in the app, it should be used on your server end to keep the key secret. It is enabled here client side as a convenience to have a self contained app without needing server side code</string>
    <string name="visibility_settings_explained">Hide / Show Intercom elements on your app. Useful when you want to display a screen that is not interfered by Intercom elements. You will need to hide launcher separately</string>
    <string name="chat_position_explained">Dictate where the chat head notification appears on your screen. Requires an unread message for this to work</string>
    <string name="action_show_conversations">Display Messenger \n .displayMessenger()</string>
    <string name="action_compose_message">New Message \n .displayMessageComposer()</string>
    <string name="name">Name</string>
    <string name="ignore_hardcoded_values">Ignore Hardcoded values</string>
    <string name="hardcoded_values">Hardcoded Values</string>
    <string name="hardcoded_values_warning">You have hardcoded values defined in your code. If the following checkbox is not checked, the hardcoded values will overwrite any value you have manually specified above</string>
    <string name="attribute_type_custom">Custom (e.g. test_data)</string>
    <string name="attribute_type_standard">Standard (name, phone, language_override, signed_up_at, unsubscribed_from_emails)</string>
    <string name="show_unread_count">Show Unread Count \n .getUnreadConversationCount()</string>
    <string name="show_help_center">Show Help Center \n .displayHelpCenter()</string>
    <string name="header_messenger_settings">Messenger Settings</string>
    <string name="unread_start">Start Listener \n .addUnreadConversationCountListener()</string>
    <string name="unread_stop">Stop Listener \n .removeUnreadConversationCountListener()</string>
    <string name="hide_after_5">Hide after 5 seconds \n .hideMessenger()</string>
</resources>
